# SpaceShooterSFML_Component

./: .gitignore  CMakeLists.txt  README.md
data/ColorPalettes/: dark_purple.color  harmonic.json  harmonic2.color  joy.color  mk1.color
data/Scripts/: settings.json  shotgun.gun  shotgun.json
data/Users/: default.json
src/: Component.cpp  KeyboardMover.cpp  ParticleEffect.cpp  ParticleEffect.h  Player.h  SimpleSprite.cpp  SimpleSprite.h  Transform.cpp  Transform.h  main.cpp
src/BaseClasses/: Component.h  Entity.cpp  Entity.h
src/Components/: Animation.cpp  Animation.h  Aura.cpp  Aura.h  CircleShape.cpp  CircleShape.h  EnergyCore.cpp  EnergyCore.h  Gun.cpp  Gun.h  Health.cpp  Health.h  Healthbar.cpp  Healthbar.h  Hitbox.cpp  Hitbox.h  InvisibiltyMode.cpp  InvisibiltyMode.h  KeyboardMover.h  LinearMover.cpp  LinearMover.h  MouseOver.cpp  MouseOver.h  Outline.cpp  Outline.h  ParticleEffect.cpp  ParticleEffect.h  RandomMover.cpp  RandomMover.h  SimpleSprite.cpp  SimpleSprite.h  Split.cpp  Split.h  Text.cpp  Text.h
src/Entities/: Button.cpp  Button.h  Coins.cpp  Coins.h  Enemy.cpp  Enemy.h  HealthPowerUp.cpp  HealthPowerUp.h  InvisibleToken.cpp  InvisibleToken.h  Planet.cpp  Planet.h  Player.cpp  Player.h  PowerUp.cpp  PowerUp.h  SimpleText.cpp  SimpleText.h  SpaceBackground.cpp  SpaceBackground.h  SpaceShip.cpp  SpaceShip.h  Sprite.cpp  Sprite.h  ToggleList.cpp  ToggleList.h  TriggerableButton.cpp  TriggerableButton.h
src/States/: MainGame.cpp  MainGame.h  Settings.cpp  Settings.h  StartupScreen.cpp  StartupScreen.h  TestState.cpp  TestState.h
(+8 files in other folders)
